--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "chai": "^3.5.0",
+    "chance": "^1.0.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jwt-simple": "^0.5.0",
+    "moment": "^2.15.0",
     "response-time": "^2.3.1",
     "underscore": "^1.8.3",
     "winston": "^2.2.0"
