--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "~1.15.1",
     "chai": "^3.5.0",
     "chance": "^1.0.4",
@@ -18,7 +19,9 @@
     "jade": "~1.11.0",
     "jwt-simple": "^0.5.0",
     "moment": "^2.15.0",
+    "password-hash": "^1.2.2",
     "response-time": "^2.3.1",
+    "sqlite3": "^3.1.4",
     "underscore": "^1.8.3",
     "winston": "^2.2.0"
   }
