--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "node": ">=4.2.1"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "SET NODE_ENV=dev && node app.js",
+    "test": "eslint app.js controllers/* services/* test && mocha test/**/*.test.js common/*"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "bluebird": "^3.4.6",
     "body-parser": "~1.15.1",
     "chai": "^3.5.0",
@@ -18,11 +20,16 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "jwt-simple": "^0.5.0",
+    "mocha": "^3.0.2",
     "moment": "^2.15.0",
     "password-hash": "^1.2.2",
     "response-time": "^2.3.1",
     "sqlite3": "^3.1.4",
     "underscore": "^1.8.3",
     "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "chai-as-promised": "^5.3.0",
+    "mocha": "^3.0.2"
   }
 }
