--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "response-time": "^2.3.1",
     "sqlite3": "^3.1.4",
     "underscore": "^1.8.3",
+    "underscore.string": "^3.3.4",
     "winston": "^2.2.0"
   },
   "devDependencies": {
