--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai": "^3.5.0",
     "chance": "^1.0.4",
     "cookie-parser": "~1.4.3",
+    "curry": "^1.2.0",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
@@ -24,6 +25,7 @@
     "moment": "^2.15.0",
     "password-hash": "^1.2.2",
     "response-time": "^2.3.1",
+    "soap-server": "^0.1.0",
     "sqlite3": "^3.1.4",
     "underscore": "^1.8.3",
     "underscore.string": "^3.3.4",
